Added global search and updated the revision number to 1.1.0.